--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,6 +30,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <link rel="app" href="assets/js/app.js" />
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
