modified app.js and added 'standard work hours' to HTML

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,8 +30,61 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <link rel="app" href="assets/js/app.js" />
+      <div class="row">
+          <h1 class="col-1 time-block">0800</h1>
+          <textarea class="col-10 description"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+      <div class="row">
+        <h1 class="col-1 time-block">0900</h1>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div> 
+       <div class="row">
+        <h1 class="col-1 time-block">1000</h1>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div> 
+    <div class="row">
+        <h1 class="col-1 time-block">1100</h1>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div> 
+    <div class="row">
+        <h1 class="col-1 time-block">1200</h1>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div> 
+    <div class="row">
+        <h1 class="col-1 time-block">1300</h1>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div> 
+    <div class="row">
+        <h1 class="col-1 time-block">1400</h1>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div> 
+    <div class="row">
+        <h1 class="col-1 time-block">1500</h1>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div> 
+        <div class="row">
+        <h1 class="col-1 time-block">1600</h1>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
     </div>
+    </div> 
+        <div class="row">
+        <h1 class="col-1 time-block">1700</h1>
+        <textarea class="col-10 description"></textarea>
+        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+    </div> 
+
+
+    <link rel="app" href="./assets/js/app.js" />
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
