--- a/index.html
+++ b/index.html
@@ -27,60 +27,18 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
-    </header>
+      <p>Current Date (My Format): <span id="#date-my"></span></p>
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row">
-          <h1 class="col-1 time-block">0800</h1>
-          <textarea class="col-10 description"></textarea>
+          <hour class="col-2 time-block">0800</hour>
+          <textarea class="col-9 description"></textarea>
           <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row">
-        <h1 class="col-1 time-block">0900</h1>
-        <textarea class="col-10 description"></textarea>
-        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
-      </div> 
-       <div class="row">
-        <h1 class="col-1 time-block">1000</h1>
-        <textarea class="col-10 description"></textarea>
-        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
-      </div> 
-    <div class="row">
-        <h1 class="col-1 time-block">1100</h1>
-        <textarea class="col-10 description"></textarea>
-        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
-    </div> 
-    <div class="row">
-        <h1 class="col-1 time-block">1200</h1>
-        <textarea class="col-10 description"></textarea>
-        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
-    </div> 
-    <div class="row">
-        <h1 class="col-1 time-block">1300</h1>
-        <textarea class="col-10 description"></textarea>
-        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
-    </div> 
-    <div class="row">
-        <h1 class="col-1 time-block">1400</h1>
-        <textarea class="col-10 description"></textarea>
-        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
-    </div> 
-    <div class="row">
-        <h1 class="col-1 time-block">1500</h1>
-        <textarea class="col-10 description"></textarea>
-        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
-    </div> 
-        <div class="row">
-        <h1 class="col-1 time-block">1600</h1>
-        <textarea class="col-10 description"></textarea>
-        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+
     </div>
-    </div> 
-        <div class="row">
-        <h1 class="col-1 time-block">1700</h1>
-        <textarea class="col-10 description"></textarea>
-        <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
-    </div> 
+      
+      
 
 
     <link rel="app" href="./assets/js/app.js" />
