--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- bootstrap used to create a table -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <!--fonts, specificaly a symbol, used from fontawesome  -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <!-- fonts used from Google. -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
@@ -22,13 +25,16 @@
     <title>Work Day Scheduler</title>
   </head>
 
+  <!-- the body of the 'work day scheduler' -->
   <body>
+    <!-- this is the header above the container div that houses the hour by hour schedule -->
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
       <p>Current Date: <span id="date-my"></span></p>
-    <div class="container">
+    <!-- this is the container for the schedule -->
+      <div class="container">
       <!-- Timeblocks go here -->
       <!-- first hour of the day, 0700-0759 -->
       <div id="hour1" class="row time-block">
@@ -103,7 +109,7 @@
         <button class="btn saveBtn col-1"><i class="fas fa-save"></i></button>
       </div>
     </div>
-         
+    <!-- these are the scripts that run JQUERY and MOMENT as well as link to the JavaScript sheet that provides functionality herein  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/app.js"></script>
